--- a/binclock/index.html
+++ b/binclock/index.html
@@ -36,7 +36,7 @@
 			.setSecondsPosition( 'middle' )
 			.setType( 'small' )
 			.setOrientation( 'ttb' )
-			.setTheme( 'thm-re' );
+			.setTheme( 'thm-1' );
 
 			document.getElementById( 'ttb' ).onclick = function( ) { oBC.setOrientation( 'ttb' ); };
 			document.getElementById( 'btt' ).onclick = function( ) { oBC.setOrientation( 'btt' ); };
