Added link data attributes in description

--- a/reprojector/index.html
+++ b/reprojector/index.html
@@ -708,6 +708,97 @@ var oProjector = new ReProjector({
 			</tbody>
 		</table>
 		
+		<h2>Link attributes</h2>
+		<p class="text">The link may contain the following data attributes::</p>
+		<table class="table">
+			<caption></caption>
+			<colgroup>
+				<col class="col-option" />
+				<col class="col-description" />
+			</colgroup>
+			<thead>
+				<tr>
+					<th>Attribute</th>
+					<th>Description</th>
+				</tr>
+			</thead>
+			<tbody>
+					data-accent-color="#abc270"
+					data-title="Direction"
+					data-description=""
+					data-camera-make="NIKON CORPORATION"
+					data-camera-model="NIKON D7000"
+					data-camera-aperture="56/10"
+					data-camera-exposure="1/60"
+					data-camera-flength="2000/10"
+					data-camera-iso="200"
+					data-camera-metering="5"
+					data-camera-program="3"
+					data-camera-date="2017-06-30 11:24:40"
+					
+				<tr>
+					<td class="cell-option"><strong><code>data-accent-color</code></strong></td>
+					<td class="cell-description">
+						The theme (background) color in case <code>color</code> theme will be used with <span class="re-projector-title">{Re}Projector</span>.<br>
+						<strong class="example">Example</strong>: <code>#abc270</code>
+					</td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-title</code></strong></td>
+					<td class="cell-description">The title of the image.</td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-description</code></strong></td>
+					<td class="cell-description">The description of the image. It appears below the title.</td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-make</code></strong></td>
+					<td class="cell-description">Manufacturer of the camera. (EXIF; not is use)<br>
+					<strong class="example">Example</strong>: <code>NIKON CORPORATION</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-model</code></strong></td>
+					<td class="cell-description">Model of the camera. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>NIKON D7000</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-aperture</code></strong></td>
+					<td class="cell-description">The aperture value for the photo. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>56/10</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-exposure</code></strong></td>
+					<td class="cell-description">The time value for the photo. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>1/60</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-flength</code></strong></td>
+					<td class="cell-description">The focal length of the lens while the photo has been taken. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>2000/10</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-iso</code></strong></td>
+					<td class="cell-description">The ISO sensitivity of the photo. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>200</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-metering</code></strong></td>
+					<td class="cell-description">The exposure metering of the photo. (EXIF; still not in use)<br>
+					<strong class="example">Example</strong>: <code>5</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-program</code></strong></td>
+					<td class="cell-description">The exposure program of the photo. It is a number. More info <a href="https://www.awaresystems.be/imaging/tiff/tifftags/privateifd/exif/exposureprogram.html">here</a>. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>3</code></td>
+				</tr>
+				<tr>
+					<td class="cell-option"><strong><code>data-camera-date</code></strong></td>
+					<td class="cell-description">Date when picture was taken. (EXIF)<br>
+					<strong class="example">Example</strong>: <code>2017-06-30 11:24:40</code></td>
+				</tr>
+			</tbody>
+		</table>
+		
 		<h2>License</h2>
 		<p class="text">MIT.</p>
 		
