Added link data attributes in description bf v2

--- a/reprojector/index.html
+++ b/reprojector/index.html
@@ -708,8 +708,8 @@ var oProjector = new ReProjector({
 			</tbody>
 		</table>
 		
-		<h2>Link attributes</h2>
-		<p class="text">The link may contain the following data attributes::</p>
+		<h2>Link data attributes</h2>
+		<p class="text">The link may contain the following data attributes:</p>
 		<table class="table">
 			<caption></caption>
 			<colgroup>
