--- a/reprojector/index.html
+++ b/reprojector/index.html
@@ -281,6 +281,15 @@
 			<li>Color backgrounds</li>
 		</ul>
 		
+		<h2>Install</h2>
+		<pre><code>
+git clone https://github.com/Re-n-Im/re-projector.git
+		</code></pre>
+		<p class="text">or</p>
+		<pre><code>
+bower install re-projector
+		</code></pre>
+		
 		<h2>How to use</h2>
 		<pre><code class="html">
 &lt;link rel=&quot;stylesheet&quot; href=&quot;dist/css/re-projector.min.css&quot; /&gt;
