Some spell mistakes fixes

--- a/reprojector/index.html
+++ b/reprojector/index.html
@@ -472,7 +472,7 @@ var oProjector = new ReProjector({
 					<strong class="example">Default:</strong> <code>true</code>
 				</td></tr>
 				<tr><td class="cell-option"><strong>&#x2514; timeout</strong></td><td class="cell-description">
-					Floating point value (seconds, multiplied by 1000), describes the time after last mouse movement when projection controls will be hidden. This is only in case <code>toggle</code> option is set with value <code>'mousemove'</code>.<br>
+					Floating point value (seconds, multiplied by 1000), describes the time after last mouse movement when projection controls will be hidden. This is only in case <code>toggle</code> option is set to value <code>'mousemove'</code>.<br>
 					<strong class="example">Default:</strong> <code>3</code>
 				</td></tr>
 				<tr><td class="cell-option"><strong>toggle</strong></td><td class="cell-description">
@@ -590,7 +590,7 @@ var oProjector = new ReProjector({
 		</table>
 		<h2>Mice, keyboard and other interactions</h2>
 		<h3 class="sections">Mouse</h3>
-		<p class="text">By default is enabled mouse wheel navigation through the slides.</p>
+		<p class="text">Mouse wheel navigation through the slides is enabled by default.</p>
 		<h3 class="sections">Keyboard</h3>
 		<p class="text">Keybinding are available as follows:</p>
 		<table class="table">
@@ -625,22 +625,22 @@ var oProjector = new ReProjector({
 					Set background theme to <code>'color'</code>.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Arrow down</code> key</strong></td><td class="cell-description">
-					Navigato to next image.
+					Navigate to next image.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Arrow right</code> key</strong></td><td class="cell-description">
-					Navigato to next image.
+					Navigate to next image.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Space</code> key</code> key</strong></td><td class="cell-description">
-					Navigato to next image.
+					Navigate to next image.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Arrow up</code> key</strong></td><td class="cell-description">
-					Navigato to previous image.
+					Navigate to previous image.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Arrow left</code> key</strong></td><td class="cell-description">
-					Navigato to previous image.
+					Navigate to previous image.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Space</code> key + <code>Shift</code> key</strong></td><td class="cell-description">
-					Navigato to previous image.
+					Navigate to previous image.
 				</td></tr>
 				<tr><td class="cell-option"><strong><code>Escape</code> key</strong></td><td class="cell-description">
 					By default, pressing <code>ESC</code> key will close the <span class="re-projector-title">{Re}Projector</span>.
