--- a/reprojector/index.html
+++ b/reprojector/index.html
@@ -8,7 +8,9 @@
 		<link href="https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps|Open+Sans:400,700" rel="stylesheet" />
 		<link href="css/reset.css" rel="stylesheet" />
 		<link href="css/photographs.css" rel="stylesheet" />
+		<!-- build:css css/re-projector.min.css -->
 		<link rel="stylesheet" href="css/re-projector.css" />
+		<!-- endbuild -->
 		<link rel="stylesheet" href="css/gruvbox-light.min.css" />
 		<style type="text/css">
 		html, body {
